# openvm

./: Cargo.toml
crates/circuits/primitives/src/bitwise_op_lookup/: mod.rs
crates/constraint/openvm_aux/: Cargo.toml
crates/constraint/openvm_aux/src/: lib.rs
crates/constraint/openvm_derive/: Cargo.toml
crates/constraint/openvm_derive/src/: constraint_ext_annotation.rs  lib.rs
extensions/rv32im/circuit/: Cargo.toml
extensions/rv32im/circuit/src/adapters/: alu.rs  mul.rs
extensions/rv32im/circuit/src/base_alu/: core.rs
extensions/rv32im/circuit/src/mul/: core.rs
extensions/rv32im/circuit/src/mulh/: core.rs
