[package]
name = "openvm-rv32im-circuit"
description = "OpenVM circuit extension for RISC-V 32-bit IM instruction set"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
openvm-stark-backend = { workspace = true }
openvm-stark-sdk = { workspace = true, optional = true }
openvm-cuda-backend = { workspace = true, optional = true }
openvm-cuda-common = { workspace = true, optional = true }
openvm-circuit-primitives = { workspace = true }
openvm-circuit-primitives-derive = { workspace = true }
openvm-circuit = { workspace = true }
openvm-circuit-derive = { workspace = true }
openvm-instructions = { workspace = true }
openvm-rv32im-transpiler = { workspace = true }
strum.workspace = true
derive-new.workspace = true
derive_more = { workspace = true, features = ["from"] }
rand.workspace = true
eyre.workspace = true
cfg-if.workspace = true

# for div_rem:
num-bigint.workspace = true
num-integer.workspace = true
serde = { workspace = true, features = ["derive", "std"] }

# for constraint extraction support:
openvm-derive = { path = "../../../../openvm_derive" }
openvm-aux = { path = "../../../../openvm_aux" }

[dev-dependencies]
openvm-stark-sdk = { workspace = true }
openvm-circuit = { workspace = true, features = ["test-utils"] }
test-case.workspace = true

[build-dependencies]
openvm-cuda-builder = { workspace = true, optional = true }

[features]
default = ["parallel", "jemalloc"]
parallel = ["openvm-circuit/parallel"]
test-utils = ["openvm-circuit/test-utils", "dep:openvm-stark-sdk"]
tco = ["openvm-circuit/tco"]
aot = ["openvm-circuit/aot", "openvm-circuit-derive/aot"]
# performance features:
mimalloc = ["openvm-circuit/mimalloc"]
jemalloc = ["openvm-circuit/jemalloc"]
jemalloc-prof = ["openvm-circuit/jemalloc-prof"]
nightly-features = ["openvm-circuit/nightly-features"]

cuda = [
    "dep:openvm-stark-sdk",
    "dep:openvm-cuda-builder",
    "dep:openvm-cuda-common",
    "dep:openvm-cuda-backend",
    "openvm-circuit-primitives/cuda",
    "openvm-circuit/cuda",
]
touchemall = [
    "cuda",
    "openvm-circuit/touchemall",
    "openvm-circuit-primitives/touchemall",
    "openvm-cuda-backend/touchemall",
    "openvm-cuda-common/touchemall",
]
legacy-v1-3-mem-align = []
